logout & sessions added, test cases fixed
