# controllers/index.js
@@ -1,7 +1,9 @@
-const usersController = require('./users.controller.js');
-const productsController = require('./products.controller.js');
+const usersController = require('./users.controller');
+const productsController = require('./products.controller');
+const authController = require('./auth.controller');
 
 module.exports = {
     usersController,
     productsController,
+    authController,
 };
