# routes/auth.route.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const router = express.Router();
+const { authController } = require('../controllers');
+const {
+    login,
+    logout,
+} = authController;
+
+router.route('/login').post(login);
+
+router.route('/logout').get(logout);
+
+module.exports = router;
