# routes/index.js
@@ -1,7 +1,9 @@
 const usersRoutes = require('./users.route');
 const productsRoutes = require('./products.route');
+const authRoutes = require('./auth.route');
 
 module.exports = {
     usersRoutes,
     productsRoutes,
+    authRoutes,
 }
